# sfml-snek-

./: CMakeLists.txt  CMakePresets.json
sfml/: CMakeLists.txt  sfml.cpp  sfml.h
